--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h1>RENAN GABRIEL BUENO</h1>
 
-Atualmente trabalho com <b>PHP</b>
+<h2>Sobre:</h2>
+<p><b>Idade: </b>20 anos</p>
+<p><b>Cidade: </b>Cornélio Procópio</p>
+
+<h2>Atualmente:</h2>
+<p>Trabalho com <b>PHP</b></p>
+<p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
