--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <h2>Atualmente:</h2>
 <p>Trabalho com <b>PHP</b></p>
 <p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
+<p>Trabalho na Cia <h3>Iguaçu</h3> de Café Solúvel</p>
