--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <h2>Atualmente:</h2>
 <p>Trabalho com <b>PHP</b></p>
 <p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
-<p>Trabalho na Cia <h3>Iguaçu</h3> de Café Solúvel</p>
-<p>Utilizo o sistema <h3>SAP</h3> na maior parte do tempo</p>
+<p>Trabalho na Cia <b>Iguaçu</b> de Café Solúvel</p>
+<p>Utilizo o sistema <b>SAP</b> na maior parte do tempo</p>
