--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<h1>RENAN GABRIEL BUENO</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<h2>Sobre:</h2>
-<p><b>Idade: </b>20 anos</p>
-<p><b>Cidade: </b>Cornélio Procópio</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculo</title>
+</head>
 
-<h2>Atualmente:</h2>
-<p>Trabalho com <b>PHP</b></p>
-<p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
+<body>
+    <h1>RENAN GABRIEL BUENO</h1>
+
+    <h2>Sobre:</h2>
+    <p><b>Idade: </b>20 anos</p>
+    <p><b>Cidade: </b>Cornélio Procópio</p>
+
+    <h2>Atualmente:</h2>
+    <p>Trabalho com <b>PHP</b></p>
+    <p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
 <p>Trabalho na Cia <b>Iguaçu</b> de Café Solúvel</p>
 <p>Utilizo o sistema <b>SAP</b> na maior parte do tempo</p>
+</body>
+</html>
