--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>RENAN GABRIEL BUENO</h1>
 
+
     <h2>Sobre:</h2>
     <p><b>Idade: </b>20 anos</p>
     <p><b>Cidade: </b>Cornélio Procópio</p>
@@ -17,7 +18,9 @@
     <h2>Atualmente:</h2>
     <p>Trabalho com <b>PHP</b></p>
     <p>Utilizando também banco de dados da<span style="color: red;""> Oracle</span></p>
-<p>Trabalho na Cia <b>Iguaçu</b> de Café Solúvel</p>
-<p>Utilizo o sistema <b>SAP</b> na maior parte do tempo</p>
+    <p>Trabalho na Cia <b>Iguaçu</b> de Café Solúvel</p>
+    <p>Utilizo o sistema <b>SAP</b> na maior parte do tempo</p>
+
+    <img src="E5xLqe7X0AQjqWk.png" style="height: auto; width: 15px;" title="Eu escrevendo esse código">
 </body>
 </html>
